INFRA-469: more cleanup